--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
         <span id="user_name"></span>
         <span id="time_text"></span>
         <span id="follow_button">
-          <a href="#">follow</a>
+          <a href="#">購読</a>
         </span>
       </div>
     </div>
