--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src="jquery-1.6.1.min.js"></script>
     <script src="popup.js"></script>
-    <link rel="stylesheet" type="text/css" href="popup.css" />
+    <link rel="stylesheet" type="text/css" href="popup.css" charset="utf-8" />
   </head>
   <body>
     <div id="left-pane">
