--- a/background.html
+++ b/background.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="jquery-1.6.1.min.js"></script>
-    <script src="background.js"></script>
+    <script src="background.js" charset="utf-8"></script>
   </head>
   <body>
   </body>
